k8s/local/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mysql
  strategy: {}
  template:
    metadata:
      labels:
        run: mysql
    spec:
       containers:
       - args:
         - --lower_case_table_names=1
         image: mysql:8.0
         imagePullPolicy: IfNotPresent
         name: mysql
         ports:
         - containerPort: 3306
           protocol: TCP
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
         - mountPath: /var/lib/mysql
           name: mysql-data
           readOnly: false
       restartPolicy: Always
       volumes:
       - name: mysql-data
         persistentVolumeClaim:
           claimName: mysql-data
status: { }
