k8s/local/mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mysql
  name: mysql
spec:
  containers:
  - args:
    - --lower_case_table_names=1
    image: mysql:8.0
    imagePullPolicy: IfNotPresent
    name: mysql
    ports:
    - containerPort: 3306
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/lib/mysql
      name: mysql-data
      readOnly: false
  restartPolicy: Always
  volumes:
  - name: mysql-data
    persistentVolumeClaim:
      claimName: mysql-data
status: { }
